# drone-health-modular-framework

./: .gitignore  README.md
src/drone_health_core/: CMakeLists.txt  README.md  package.xml
src/drone_health_core/health_monitor/: README.md  health_monitor.yaml  health_monitor_node.cpp
src/drone_health_core/management/: README.md  management.yaml  management_node.cpp
src/drone_health_core/supervisor/: README.md  supervisor.yaml  supervisor_node.cpp
src/drone_health_dashboard/: README.md  package.xml  setup.cfg  setup.py  test_dashboard_bridge_at_summary.py
src/drone_health_dashboard/scripts/: dashboard_bridge.py
src/drone_health_dashboard/web/: app.js  index.html  styles.css
src/drone_health_examples/: CMakeLists.txt  README.md  package.xml
src/drone_health_examples/mission_manager/: README.md  mission_manager_node.cpp
src/drone_health_examples/simulated_camera/: README.md  simulated_camera_node.cpp
src/drone_health_flow_example/: CMakeLists.txt  README.md  package.xml
src/drone_health_flow_example/simulated_flow_sensor/: README.md  simulated_flow_sensor_node.cpp
src/drone_health_interfaces/: CMakeLists.txt  README.md  package.xml
src/drone_health_interfaces/msg/: HealthStatus.msg  ManagedModule.msg  ManagementState.msg  MonitorSpec.msg  SafetyStatus.msg  SupervisorStatus.msg
src/drone_health_interfaces/srv/: DeregisterModule.srv  RegisterModule.srv  SetModuleInactive.srv
src/drone_health_lidar_example/: CMakeLists.txt  README.md  package.xml
src/drone_health_lidar_example/lidar_obstacle_processor/: README.md  lidar_obstacle_processor_node.cpp
src/drone_health_lidar_example/simulated_lidar_driver/: README.md  simulated_lidar_driver_node.cpp
src/drone_health_network_example/: CMakeLists.txt  README.md  package.xml
src/drone_health_network_example/network_nodes/: at_hilink_adapter_node.cpp  at_modem_monitor_node.cpp  lte_monitor_node.cpp  network_fusion_node.cpp  wifi_monitor_node.cpp
src/drone_health_registrable_template/: CMakeLists.txt  README.md  package.xml
src/drone_health_registrable_template/template_node/: README.md  registrable_template_node.cpp
src/drone_health_safety_example/: CMakeLists.txt  README.md  package.xml
src/drone_health_safety_example/safety_fusion/: README.md  safety_fusion.yaml  safety_fusion_node.cpp
