
  cmake_minimum_required(VERSION 3.8)
  project(drone_health_flow_example)

  if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
  endif()

  find_package(ament_cmake REQUIRED)
  find_package(rclcpp REQUIRED)
  find_package(std_msgs REQUIRED)
  find_package(geometry_msgs REQUIRED)

  add_executable(simulated_flow_sensor_node
    simulated_flow_sensor/simulated_flow_sensor_node.cpp
  )
  ament_target_dependencies(simulated_flow_sensor_node
    rclcpp
    std_msgs
    geometry_msgs
  )

  install(TARGETS
    simulated_flow_sensor_node
    DESTINATION lib/${PROJECT_NAME}
  )

  install(DIRECTORY
    simulated_flow_sensor
    DESTINATION share/${PROJECT_NAME}
    FILES_MATCHING
    PATTERN "*.md"
  )

  if(BUILD_TESTING)
    find_package(ament_lint_auto REQUIRED)
    set(ament_cmake_copyright_FOUND TRUE)
    set(ament_cmake_cpplint_FOUND TRUE)
    ament_lint_auto_find_test_dependencies()
  endif()

  ament_package()


