<?xml version="1.0"?>
<package format="3">
  <name>drone_health_lidar_example</name>
  <version>0.1.0</version>
  <description>LiDAR example nodes for the drone health monitoring framework.</description>

  <maintainer email="nila@example.com">Nila</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
